# kv-fastdata-server

./: .env.example  Cargo.toml  README.md
src/: main.rs  scylladb.rs
static/: index.html  skill.md
