[package]
name = "kv-fastdata-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
dotenv = "0.15.0"
tracing = { version = "0.1.13", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.9"
scylla = { version = "1.1.0", features = ["rustls-023", "full-serialization"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
base64 = "0.22"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
